<resources>
    <string name="app_name">新比特</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="no_data">暂无数据</string>
    <string name="login_invalid">登录失效，请重新登录！</string>
    <string name="submit">提交</string>
    <string name="exit_again">再按一次退出</string>
    <string name="name">姓名</string>
    <string name="new_pwd">输入新的登录密码</string>
    <string name="photograph">拍照</string>
    <string name="album">相册</string>
    <string name="success">成功</string>
    <string name="savesuccess">保存成功</string>
    <string name="download_tag">开始下载...请稍候</string>
    <string name="more">更多</string>
    <string name="index">指标</string>
    <string name="hide">隐藏</string>
    <string name="main">主图</string>
    <string name="child">副图</string>
    <string name="delete">删除</string>
    <string name="users_login">用户登录</string>
    <string name="users_sign">如没有账号，请</string>
    <string name="users_go_sign">前往注册></string>
    <string name="users_if_login">如有账号，请</string>
    <string name="users_if_go_login">直接登录></string>
    <string name="save">保存</string>
    <string name="setting">设置</string>
    <string name="phone">400000000</string>
    <string name="web">http://www.newbtc.online</string>
    <string name="no_input_emoji">不支持输入表情</string>
    <string name="str_payway_ali">支付宝</string>
    <string name="str_payway_wechat">微信</string>
    <string name="str_payway_union">银联</string>
    <string name="please_enter_the">请输入</string>
    <string name="gains">涨幅</string>
    <string name="edit_decimals_tag">您输入的小数已超过限定位数</string>
    <string name="pub_ads_confirm">广告创建成功，需要手动上架，是否上架？</string>
    <string name="str_no_order">暂无订单&#8230;</string>
    <string name="buy_coins">买币</string>
    <string name="sell_coins">卖币</string>
    <string name="bind_account">请先绑定收款账户</string>
    <string name="str_try_refresh">点我刷新</string>
    <string name="str_get_exchange_info">获取盘口数据</string>
    <string name="egional_selection">地区选择</string>
    <string name="message_details">消息详情</string>
    <string name="detail_title">详情</string>
    <string name="unknown_error">未知错误</string>
    <string name="no_network">当前无网络</string>
    <string name="parse_error">数据异常</string>
    <string name="request_cancel">请求取消</string>
    <string name="server_error">服务器异常</string>
    <string name="operation_timeout">您的操作已超时，请重试！</string>
    <string name="str_connection_out">网络请求超时，请重试</string>
    <string name="str_connection_error">连接异常</string>
    <string name="str_server_error">服务器异常</string>
    <string name="str_json_error">数据格式错误</string>
    <string name="str_no_permission">未获取权限，无法使用相关功能</string>
    <string name="str_please_check_net">请检查网络</string>
    <string name="str_users_please_sigh_in_before">如没有账号，请</string>
    <string name="str_users_please_sigh_in_after">前往注册</string>
    <string name="str_username">用户名</string>
    <string name="str_pwd">密码</string>
    <string name="str_please_input">请输入</string>
    <string name="str_login_success">登录成功</string>
    <string name="str_login_error">用户名或密码错误</string>
    <string name="str_read">我已阅读并同意</string>
    <string name="str_please_input_correct">请输入正确的</string>
    <string name="str_please">请</string>
    <string name="str_email_sign_up">邮箱注册</string>
    <string name="str_phone_sign_up">手机号注册</string>
    <string name="str_phone_number">手机号码</string>
    <string name="str_email">邮箱</string>
    <string name="str_pwd_diff">两次密码不一致！</string>
    <string name="str_code">验证码</string>
    <string name="str_pwd_login">登录密码</string>
    <string name="str_confirm_pwd">确认密码</string>
    <string name="str_please_login_have_account">如有账号，请</string>
    <string name="str_please_login">直接登录</string>
    <string name="str_regist_agree">《用户协议》</string>
    <string name="str_from">从</string>
    <string name="str_to">到</string>
    <string name="str_base_account">默认账户</string>
    <string name="str_trade_account">交易账户</string>
    <string name="str_base_account_all">总资产</string>
    <string name="str_coin_can_banlance">可用余额:</string>
    <string name="str_min_coin_num_tag">最小提币数量</string>
    <string name="activity_skip_pay_title">确认支付</string>
    <string name="activity_skip_extract_title">确认提币</string>
    <string name="str_transfer_number">划转数量</string>
    <string name="str_transfer_banlance">可转金额:</string>
    <string name="str_assets_transfer">资金划转</string>
    <string name="str_min_coin_amount">划转数量必须大于0</string>
    <string name="str_pay_confirm_delete">确认删除</string>
    <string name="str_first_credit">请先进行实名认证</string>
    <string name="str_id_card_credit">身份认证</string>
    <string name="str_port_credit">护照认证</string>
    <string name="str_name">姓名</string>
    <string name="str_please_input_correct_id_num">请输入正确格式的身份证号</string>
    <string name="str_id_num">身份证号码</string>
    <string name="str_port_num">护照号</string>
    <string name="str_upload_success">上传成功</string>
    <string name="str_idcard_diff">身份证号格式不正确</string>
    <string name="str_passportImage">护照照片</string>
    <string name="str_takePassportImage">手持护照</string>
    <string name="str_id_credit_tag">开始认证</string>
    <string name="str_library_file_exception">图库文件返回异常</string>
    <string name="str_please_up">请上传</string>
    <string name="str_detify_again">重新认证</string>
    <string name="str_other">其他</string>
    <string name="str_account">账号</string>
    <string name="str_paypal">PayPal</string>
    <string name="str_delete_address">确认删除此地址？</string>
    <string name="camera_permission">权限不可用，请开启相机权限</string>
    <string name="storage_permission">权限不可用，请开启存储权限</string>
    <string name="password_realname">请先设置资金密码和实名认证</string>
    <string name="binding_phone_first">请先绑定手机号</string>
    <string name="realname_first">请先实名认证</string>
    <string name="realname_business_first">请先前往PC端进行商家认证</string>
    <string name="library_file_exception">图库文件返回异常</string>
    <string name="incomplete_information">填写信息不完整</string>
    <string name="empty_address">数据有误，地址为空</string>
    <string name="order_details_failed">订单详情获取失败,正在重新获取</string>
    <string name="no_qrcode">未设置二维码地址</string>
    <string name="no_ads">广告信息获取失败，正在重新获取！</string>
    <string name="login_tag">登录出现异常，请重新登录</string>
    <string name="socket_time">网络请求超时，请重试</string>
    <string name="request_error">请求出错！</string>
    <string name="nationality">国籍</string>
    <string name="china">中国</string>
    <string name="start_bind">开始绑定</string>
    <string name="str_usa">美国</string>
    <string name="change_phone_num">修改手机号</string>
    <string name="change_bind_phone_num">修改绑定手机号</string>
    <string name="change_bind_phone_num_tag">您正在修改绑定的手机号，请进行身份认证</string>
    <string name="receive_phone_code">原手机能接收验证码</string>
    <string name="unreceive_phone_code">原手机不能接收验证码</string>
    <string name="unreceive_phone_code_tag">原手机号不能接收验证码，请联系客服进行修改绑定</string>
    <string name="handset_tail_number">手机尾号</string>
    <string name="receive_message_code">接收到的短信验证码</string>
    <string name="change_email_num">修改邮箱</string>
    <string name="email_old">原始邮箱号</string>
    <string name="email_new">新的邮箱号</string>
    <string name="input_email">请输入邮箱号</string>
    <string name="input_code">请先输入验证码</string>
    <string name="unbind_email_fail">解绑邮箱失败</string>
    <string name="change_login_pwd">更改登录密码</string>
    <string name="change_login_pwd_tag">您正在修改登录密码</string>
    <string name="change_login_pwd_bind_phone_tag">您已经绑定手机号</string>
    <string name="change_login_pwd_success_tag">修改成功，请重新登录</string>
    <string name="old_login_pwd">旧登录密码</string>
    <string name="new_login_pwd">新登录密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="set_money_pwd">设置资金密码</string>
    <string name="edit_money_pwd_tag">您正在修改资金密码</string>
    <string name="set_money_pwd_tag">您正在设置资金密码</string>
    <string name="change_money_pwd">修改资金密码</string>
    <string name="reset_money_pwd_tag">您正在重置资金密码</string>
    <string name="old_money_pwd">旧资金密码</string>
    <string name="new_money_pwd">新资金密码</string>
    <string name="confirm_money_pwd">确认资金密码</string>
    <string name="IdCardTopBtn">身份证认证</string>
    <string name="passportTopBtn">护照认证</string>
    <string name="id_card_num">身份证号码</string>
    <string name="str_image_face_id_card">身份证正面照</string>
    <string name="str_image_back_id_card">身份证反面照</string>
    <string name="str_image_hold_id_card">手持身份证\n正面照</string>
    <string name="upload_success">上传成功</string>
    <string name="idcard_diff">身份证号格式不正确</string>
    <string name="passportNum">护照号</string>
    <string name="passportImage">护照照片</string>
    <string name="takePassportImage">手持护照</string>
    <string name="home">首页</string>
    <string name="market">C2C</string>
    <string name="exchange">商家</string>
    <string name="account">我的</string>
    <string name="performer_home">24小时涨幅榜排行</string>
    <string name="not_login">未登录</string>
    <string name="welcome_to">欢迎进入新比特</string>
    <string name="my_assast">我的资产</string>
    <string name="my_order">我的订单</string>
    <string name="my_ads">我的广告</string>
    <string name="my_message">平台消息</string>
    <string name="my_entrust">我的委托</string>
    <string name="my_promotion">我的推广</string>
    <string name="my_credit">身份认证</string>
    <string name="my_safe">安全中心</string>
    <string name="my_version">版本更新</string>
    <string name="my_setting">设置中心</string>
    <string name="balance">总资产(USDT)</string>
    <string name="confirm_logout">您确定要退出登录？</string>
    <string name="logout_current_account">退出当前账号</string>
    <string name="promote_friends">推广好友</string>
    <string name="my_commission">我的佣金</string>
    <string name="register_time">注册时间</string>
    <string name="recommendation_level">推荐级别</string>
    <string name="release_time">发放时间</string>
    <string name="currency">币种</string>
    <string name="remarks">备注</string>
    <string name="invite">点击保存海报，发送给朋友</string>
    <string name="invite_tag">扫描二维码，邀请你加入</string>
    <string name="promotion_link">专属推广链接:</string>
    <string name="level_one">一级</string>
    <string name="level_two">二级</string>
    <string name="level_three">三级</string>
    <string name="level_four">四级</string>
    <string name="promote_friends_tag">邀请总人数</string>
    <string name="commission_tag">获得返佣</string>
    <string name="invite_code_tag">我的邀请码： </string>
    <string name="order_appeal">订单申诉</string>
    <string name="appeal_tag">注:为了更加快速的为您解决问题，请您上传相应的照片，比如支付完成页面等。</string>
    <string name="appeal_reason">请简要描述您申诉的原因（300字以内）</string>
    <string name="appeal_type">申诉类型</string>
    <string name="appeal_statement">申诉说明</string>
    <string name="appeal_type_paied">已付款，未收到币</string>
    <string name="appeal_type_unpay">已付币，未收到款</string>
    <string name="chat">正在聊天</string>
    <string name="send_chat">发送</string>
    <string name="all">全部</string>
    <string name="text_can_used">可用</string>
    <string name="text_money_pwd">资金密码</string>
    <string name="text_enter_money_pwd">请输入资金密码</string>
    <string name="amount">数量</string>
    <string name="mention_money_address">提币地址</string>
    <string name="mention_account">到账数量</string>
    <string name="select">选择</string>
    <string name="enter_address_tag2">请输入提币地址</string>
    <string name="enter_remark">请输入备注信息</string>
    <string name="str_add">添加</string>
    <string name="unionpay_account">银行卡</string>
    <string name="unionpay_accountTip">请输入银行卡号</string>
    <string name="unionpay_accountTip2">请再次输入银行卡号</string>
    <string name="bank">开户银行</string>
    <string name="account_opening_branch">开户支行</string>
    <string name="account_opening_branchTip">请输入开户支行</string>
    <string name="confirm_cardnumber">确认卡号</string>
    <string name="send_code">发送验证码</string>
    <string name="phone_code">短信验证码</string>
    <string name="repeat_password">确认新密码</string>
    <string name="code">验证码</string>
    <string name="str_poundage">网络费</string>
    <string name="str_assets_select_addrss">请先选择提币地址</string>
    <string name="text_money_pwd_tag">请输入6位资金密码</string>
</resources>